2015-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Fix Coverity 10320
	"Untrusted array index read" and "Untrusted loop bound".

2015-04-24  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Attempt to fix Coverity issue
	10284 by using "opacity = (header[3] & 0xff)".

2015-04-23  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobMSBLong, ReadBlobLSBLong): Attempt
	to fix various "tainted" or "untrusted" variables
	by masking off all but the lower 32 bits returned.

2015-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Fix Coverity 10216 "Integer
	overflowed argument".

	* magick/transform.c (FlipImage): Fix Coverity 61461 "Division or
	modulo by zero".

	* coders/gif.c: Protect against integer overflow in array size
	calculations.  Used unsigned type for colormap index.

2015-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/map.c (ReadMAPImage): Maybe quiet Coverity 10326
	"Untrusted pointer read".

	* magick/utility.c (GlobExpression): See if testing for null
	terminating character quiets Coverity 10246 "Untrusted value as
	argument".

	* magick/transform.c (FlipImage): Possibly quiet case #4 of
	Coverity 10311 "Untrusted value as argument".

	* magick/utility.c (Base64Encode): Quiet Coverity 10296 and 10272
	"Use of untrusted scalar value".

2015-04-22  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobMSBShort, ReadBlobLSBShort): Attempt
	to fix various "tainted" or "untrusted" variables, e.g., in
	coders/gif.c and coders/sgi.c by masking off all but the lower
	16 bits returned.

2015-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tim.c (ReadTIMImage): Make TIM reader more robust against
	EOF.

	* coders/sct.c (ReadSCTImage): Make SCT reader more robust against
	EOF.

	* coders/pwp.c (ReadPWPImage): Test loop for EOF.
