@@ -38,6 +38,9 @@
 <p>2015-04-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pcx.c (ReadPCXImage): Add some more integer-overflow
+safety to computations.  Add some casts.</li>
+<li>coders/meta.c (formatIPTC): Fix Coverity 10221 &quot;Infinite loop&quot;.</li>
 <li>magick/attribute.c (GenerateEXIFAttribute): Fix Coverity 10320
 &quot;Untrusted array index read&quot; and &quot;Untrusted loop bound&quot;.</li>
 </ul>
